# internal/transport/http/handlers/admin/create_author_handler.go
@@ -14,6 +14,8 @@ import (
 // @Tags admin
 // @Accept json
 // @Produce json
+// @Security ApiKeyAuth
+// @Param Authorization header string true "Authorization"
 // @Param request body createAuthorRequest true "request"
 // @Success 200 {object} nil "Success"
 // @Failure 500 {object} errorResponse "Internal server error"
